# Obiektowe

GradeFlow/: CMakeLists.txt  admin.cpp  admin.h  identifier.sqlite  init.sql  login.cpp  login.h  nauczyciel.cpp  nauczyciel.h  nauczyciel.ui  uczen.cpp  uczen.h  uczen.ui
Lab3/Lab3/: Lab3.cpp
OBIEKTOWKAZALICZENIE/Dokumentacja/: Dokumentacja.docx
OBIEKTOWKAZALICZENIE/GradeFlow/: admin.cpp  admin.h  admin.ui  login.cpp  login.h  nauczyciel.cpp  nauczyciel.h  nauczyciel.ui  uczen.cpp  uczen.h  uczen.ui
Zaj1/: Zaj1.sln
Zaj1/Zaj1/: Zaj1.cpp  Zaj1.vcxproj  Zaj1.vcxproj.filters
Zaliczenie/: CMakeLists.txt  admin.cpp  admin.h  admin.ui  login.cpp  login.h  login.ui
